[package]
name = "randomx4r"
version = "0.1.0"
authors = ["Matt Smith <matt@offtopica.uk>"]
edition = "2018"

license = "MIT"
readme = "README.md"

description = "Rusty wrapper for RandomX hashing"
repository = "https://github.com/moneromint/randomx4r"

[dependencies]
bitflags = "1.2.1"
randomx4r-sys = "0.1.0"