[package]
name = "randomx-bindings"
version = "0.1.4"
authors = ["Ellis Frank <mrelfranko@disroot.org>", "Matt Smith <matt@offtopica.uk>"]
edition = "2018"

license = "MIT"
readme = "README.md"

description = "Rusty wrapper for RandomX hashing"
repository = "https://github.com/mcfranko/randomx-bindings"

[dependencies]
bitflags = "1.2.1"
randomx-bindings-sys = "0.1.5"
